prevent template select from being cut off in last pipeline on page

--- a/app/scripts/modules/pipelines/config/pipelineConfig.less
+++ b/app/scripts/modules/pipelines/config/pipelineConfig.less
@@ -22,6 +22,12 @@
   margin-top: 15px;
 }
 
+.pipeline-configurer {
+  &:last-child {
+    margin-bottom: 100px;
+  }
+}
+
 pipeline-configurer {
   margin-top: 15px;
   display: block;
